--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,24 @@
 asgiref==3.8.1
 certifi==2025.4.26
 cffi==1.17.1
-charset-normalizer==3.4.1
-cryptography==44.0.2
+charset-normalizer==3.4.2
+cryptography==45.0.2
 defusedxml==0.7.1
-Django==5.1.7
-django-debug-toolbar==5.1.0
-Faker==37.1.0
+Django==5.2.1
+django-debug-toolbar==5.2.0
+django-redis==5.4.0
 idna==3.10
 oauthlib==3.2.2
 pillow==11.2.1
+psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.10.1
 python-decouple==3.8
 python3-openid==3.2.0
+redis==6.1.0
 requests==2.32.3
 requests-oauthlib==2.0.0
 social-auth-app-django==5.4.3
 social-auth-core==4.6.1
 sqlparse==0.5.3
-tzdata==2025.1
 urllib3==2.4.0
