--- a/task_env/pyvenv.cfg
+++ b/task_env/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\Hp\AppData\Local\Programs\Python\Python312
+home = /usr/bin
 include-system-site-packages = false
-version = 3.12.0
-executable = C:\Users\Hp\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\Hp\AppData\Local\Programs\Python\Python312\python.exe -m venv G:\Django Project\task-management\task_env
+version = 3.12.3
+executable = /usr/bin/python3.12
+command = /usr/bin/python3 -m venv /home/bs00856/Public/Django Project/Task-Management/task_env
